--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@react-three/fiber": "^9.1.0",
     "@react-three/postprocessing": "^3.0.4",
     "framer-motion": "^12.4.10",
+    "gsap": "^3.12.7",
     "maath": "^0.10.8",
     "react": "^19.0.0",
     "react-color": "^2.19.3",
